# ordinaldb

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DCO  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY.md  THREAT_MODEL.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: actionlint.yml  audit.yml  ci.yml  nightly-real-embeddings.yml  release-crates.yml  release-pypi.yml  scorecard.yml  zizmor.yml
benchmarks/arxiv-precomputed/: Cargo.toml  README.md
benchmarks/arxiv-precomputed/src/: main.rs
benchmarks/beir-rust/: Cargo.toml
benchmarks/beir-rust/cmake/: single-gpu-cuda.cmake
benchmarks/beir-rust/src/: main.rs
constraints/: edge-adapters.txt
cookbook/: README.md
cookbook/docspilot/: README.md  demo.py  reopen_check.py  requirements.txt
cookbook/docspilot/src/docspilot/: __init__.py  chunking.py  corpus.py  embeddings.py  store.py
cookbook/keeper/: .gitignore  README.md  demo.py  durability_demo.py  durability_writer.py  requirements.txt  session_runner.py
cookbook/keeper/keeper/: __init__.py  embedder.py  memory.py  store.py
cookbook/paperscout/: .gitignore  README.md  corpus_data.py  demo.py  fetch_papers.py  paperscout.py  reload_check.py  requirements.txt
cookbook/supportsearch/: .gitignore  Cargo.toml  README.md
cookbook/supportsearch/src/: corpus.rs  corpus_filler.rs  embedder.rs  index.rs  ltr_demo.rs  main.rs  queries.rs
docs/: api.md  edge-deployment.md  limits.md  matryoshka.md  operations.md  persistence.md  provenance.md  raspberry-pi.md
docs/notes/: 2026-07-19-chroma-lance-assessment.md
docs/roadmap/: 0.2.0-feature-parity-spec.md  0.3.0-api-async-streaming-spec.md  README.md  ed25519-sealing-audit.md  ltr-hybrid-production-spec.md  ordinaldb-trust-spec.md
examples/: benchmark_smoke.py  python_allowlist.py  python_basic.py  python_idmap.py
examples/downstream-smoke/: Cargo.toml
examples/downstream-smoke/src/: main.rs
examples/python_adapters/: agno_edge_smoke.py  blocked_egress_smoke.py  haystack_edge_smoke.py  langchain_edge_smoke.py  llama_index_edge_smoke.py
ordinaldb/: Cargo.toml
ordinaldb-adapter-store/: Cargo.toml
ordinaldb-adapter-store/src/: lib.rs
ordinaldb-adapter-store/tests/: generation_debris.rs  metadata_float_roundtrip.rs  redb_corruption.rs  redb_store.rs
ordinaldb-adapter-store/tests/common/: mod.rs
ordinaldb-cli/: Cargo.toml
ordinaldb-cli/src/: main.rs
ordinaldb-hybrid/: Cargo.toml
ordinaldb-hybrid/src/: error.rs  fusion.rs  lib.rs  ltr.rs  ltr_features.rs  ltr_manifest.rs  ltr_model.rs  sparse.rs
ordinaldb-ltr/: Cargo.toml
ordinaldb-ltr/src/: lib.rs
ordinaldb-python/: Cargo.toml  README.md  build.rs  pyproject.toml
ordinaldb-python/python/ordinaldb/: __init__.py  _ordinaldb.pyi  agno.py  haystack.py  langchain.py  llama_index.py
ordinaldb-python/python/ordinaldb/adapters/: __init__.py  _common.py
ordinaldb-python/src/: lib.rs
ordinaldb-python/tests/: _warning_hygiene.py  test_adapters_common.py  test_adapters_frameworks.py  test_adapters_llamaindex_persist_defects.py  test_adapters_warning_and_concurrency_regressions.py  test_bindings.py  test_bindings_validation.py  test_blocked_egress_smoke.py  test_e2e_real_embeddings.py  test_gil_release.py  test_haystack_pipeline_and_filters.py  test_mask_zero_copy.py
ordinaldb-python/tests/fixtures/legacy-root-index-adapter/: adapter.json  documents.json  id_map.json  metadata.json
ordinaldb-python/tests/fixtures/legacy-root-index-adapter/index.odb/: index.ovrq  manifest.json
ordinaldb/examples/: rust_basic.rs  rust_persist_demo.rs
ordinaldb/src/: error.rs  hybrid.rs  id_map.rs  io.rs  lib.rs  manifest.rs  ordinal.rs
ordinaldb/tests/: bare_relative_write.rs  boundary_api.rs  correctness_smoke.rs  id_map.rs  ordinal_index.rs  pi_runtime.rs  real_embeddings.rs  sign_load_policy.rs  sign_policy.rs
scripts/: hostile_input_smoke.py  limits_report.py  pi_arm64_profile.sh  release_crate_package_smoke.sh
tests/: release_environment_settings.sh  release_publish_invariants.sh
tests/fixtures/real_embeddings/: README.md  adversarial_floats.json  generate.py  manifest.json  texts.json
verification/: AtomicWriteProof.lean  README.md
