[workspace]
members = [
    "ordinaldb",
    "ordinaldb-adapter-store",
    "ordinaldb-cli",
    "ordinaldb-hybrid",
    "ordinaldb-ltr",
    "ordinaldb-python",
]
# Deliberately kept out of the workspace: these crates need to behave like
# genuine external consumers of the published `ordinaldb` crate, with their
# own lockfiles and none of the workspace's inherited settings.
exclude = [
    "examples/downstream-smoke",
    "benchmarks/beir-rust",
    "benchmarks/arxiv-precomputed",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Pre-publish only: build the workspace against the ordvec perf-train
# integration heads (PRs #277/#278/#279/#280 merged). Removed at the
# ordvec 0.6.0 publish, restoring crates.io version resolution.
[patch.crates-io]
ordvec = { git = "https://github.com/Project-Navi/ordvec", branch = "integration/full-stack" }
ordvec-manifest = { git = "https://github.com/Project-Navi/ordvec", branch = "integration/full-stack" }
