[workspace]
members = [
    "ordinaldb",
    "ordinaldb-adapter-store",
    "ordinaldb-cli",
    "ordinaldb-hybrid",
    "ordinaldb-ltr",
    "ordinaldb-python",
]
# Deliberately kept out of the workspace: these crates need to behave like
# genuine external consumers of the published `ordinaldb` crate, with their
# own lockfiles and none of the workspace's inherited settings.
exclude = [
    "examples/downstream-smoke",
    "benchmarks/beir-rust",
    "benchmarks/arxiv-precomputed",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# ordvec is not yet published to crates.io, so the workspace builds against
# ordvec main (currently 0.7.0 — deterministic manifest schema v2). Remove this
# patch once ordvec is published, restoring crates.io version resolution.
[patch.crates-io]
ordvec = { git = "https://github.com/Project-Navi/ordvec", branch = "main" }
ordvec-manifest = { git = "https://github.com/Project-Navi/ordvec", branch = "main" }
