[package]
name = "ordinaldb-adapter-store"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Transactional adapter state store for OrdinalDB framework integrations"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Project-Navi/ordinaldb"

[dependencies]
fs4 = "1.1"
getrandom = "0.4"
ordvec-manifest = { version = "0.6.0", default-features = false }
redb = "4"
serde = "1"
# float_roundtrip is required for correctness, not a nicety: without it,
# serde_json parses floats with a best-effort algorithm that is not
# correctly rounded, so parse(serialize(parse(s))) can drift by one ULP.
# The store re-parses payloads and table rows on every verify and compares
# them; drift makes verification report a healthy store as corrupt
# ("metadata table does not match payload") for real embedding floats.
serde_json = { version = "1", features = ["float_roundtrip"] }

[dev-dependencies]
ordinaldb-core = { package = "ordinaldb", path = "../ordinaldb", version = "0.2.0" }
