[package]
name = "ordinaldb-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Command-line inspection and verification tools for OrdinalDB"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Project-Navi/ordinaldb"

[[bin]]
name = "ordinaldb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
ordinaldb = { path = "../ordinaldb", version = "0.2.0", optional = true, features = ["experimental-ltr"] }
ordinaldb-adapter-store = { path = "../ordinaldb-adapter-store", version = "0.2.0" }
ordinaldb-ltr = { path = "../ordinaldb-ltr", version = "0.2.0", optional = true }
ordvec-manifest = { version = "0.6.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
experimental-ltr = ["dep:ordinaldb", "dep:ordinaldb-ltr"]
experimental-ltr-local-train = ["experimental-ltr"]

[dev-dependencies]
ordinaldb = { path = "../ordinaldb", version = "0.2.0" }
