[package]
name = "ordinaldb-ltr"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Learning-to-rank feature cache and training utilities for OrdinalDB"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Project-Navi/ordinaldb"

[dependencies]
hex = "0.4"
libc = "0.2"
ordinaldb = { path = "../ordinaldb", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
