[package]
name = "ordinaldb-python"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Python bindings and framework adapters for OrdinalDB"
license = "MIT"
repository = "https://github.com/Project-Navi/ordinaldb"

[lib]
name = "_ordinaldb"
crate-type = ["cdylib"]

[dependencies]
ordinaldb-adapter-store = { path = "../ordinaldb-adapter-store", version = "0.2.0" }
ordinaldb-core = { package = "ordinaldb", path = "../ordinaldb", version = "0.2.0" }
pyo3 = { version = "0.29.0", features = ["extension-module"] }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.29.0"
