[package]
name = "ordinaldb"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
description = "Local-first vector indexing powered by OrdVec ordinal quantization"
license = "MIT"
repository = "https://github.com/Project-Navi/ordinaldb"
homepage = "https://github.com/Project-Navi/ordinaldb"
readme = "../README.md"
keywords = ["vector-search", "ordinal", "nearest-neighbor", "ann", "embeddings"]
categories = ["algorithms", "database", "science"]

[features]
default = []
hybrid = ["dep:ordinaldb-hybrid"]
experimental-ltr = ["hybrid", "ordinaldb-hybrid/ltr"]

[dependencies]
ordvec = "0.6.0"
ordvec-manifest = { version = "0.6.0", default-features = false }
ordinaldb-hybrid = { path = "../ordinaldb-hybrid", version = "0.2.0", optional = true }
rayon = "1"
