[package]
name = "downstream-smoke"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone crate (NOT a workspace member) that depends on ordinaldb via
# a path dependency. This exercises the same code path a downstream cargo
# user hits when they add ordinaldb and write their first program.
#
# Run from this directory: `cargo run --release`.
[dependencies]
ordinaldb = { path = "../../ordinaldb", features = ["hybrid"] }

# Pre-publish only: this workspace-excluded example has its own lockfile and
# does not inherit the root [patch.crates-io], so it must mirror it to build
# ordinaldb's ordvec 0.6.0 requirement against the integration heads until
# ordvec 0.6.0 publishes to crates.io. Removed with the root patch at publish.
[patch.crates-io]
ordvec = { git = "https://github.com/Project-Navi/ordvec", branch = "integration/full-stack" }
ordvec-manifest = { git = "https://github.com/Project-Navi/ordvec", branch = "integration/full-stack" }
